# logic_sim

./: Cargo.toml  README.md
gui/: main.rs
logic/: lib.rs  logic_bench.rs
logic/circuit/: gate.rs  line.rs  memory.rs  mod.rs  simplegate.rs
src/: circuit.rs  gate.rs  logic_bench.rs  main.rs
src/board/: basics.rs  board.rs  circuit.rs  gate.rs  line.rs  lineregistry.rs  memory.rs  mod.rs  mux.rs  simplegate.rs  sink.rs
src/circuit/: basics.rs  circuit.rs  gate.rs  line.rs  memory.rs  mux.rs  simplegate.rs
