[package]
name = "logic_sim"
version = "0.1.0"
authors = ["AuroransSolis <primalucegd@gmail.com>"]

[dependencies]

[dev-dependencies]
criterion = "0.2.7"

[[bench]]
name = "logic_bench"
harness = false
path = "src/logic_bench.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false